<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/card"
        android:layout_centerHorizontal="true"/>


    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-42dp"
        android:backgroundTint="@color/color1"
        android:onClick="startRecognizing"
        android:text="@string/tPro" />

    <LinearLayout
        android:id="@+id/actionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:backgroundTint="@color/color3"
            android:onClick="selectImage"
            android:text="@string/tGal" />

        <Button
            android:id="@+id/btnCam"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:backgroundTint="@color/color2"
            android:text="@string/tCam" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionContainer"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/tRes"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_dark" />

</RelativeLayout>